--- a/content/index.html
+++ b/content/index.html
@@ -11,7 +11,7 @@ la promotion du libre (au sens licence libre).</p>
 
 <p>Nous hébergeons des projets de tout types allant de la création de jeux 
 vidéos <a href="https://github.com/yoann-dufresne/Spaceship_node">Spaceship</a> 
-à la création et l'entretient de carrés potagers sur l'université Lille 1 
+à la création et l'entretien de carrés potagers sur l'Université Lille 1 
 (uniquement des semences libres).</p>
 
 <p>L'association se veut porteuse de valeurs de partage et d'égalité et ce peu 
